--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.drop(labels = ['Unnamed: 0'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.replace('Null', pd.NA).dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -88,24 +106,9 @@
        "      <th>Area</th>\n",
        "      <th>Price(per sqft)</th>\n",
        "      <th>A/C</th>\n",
-       "      <th>cleaned_year</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3324 Junction Blvd #5X</td>\n",
-       "      <td>Jackson Heights, NY 11372</td>\n",
-       "      <td>Jackson Heights</td>\n",
-       "      <td>$285,000</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>1 Bed</td>\n",
-       "      <td>1 Bath</td>\n",
-       "      <td>800 sqft</td>\n",
-       "      <td>$356</td>\n",
-       "      <td>Cooling only</td>\n",
-       "      <td>Null</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>37-26 32nd St #5K</td>\n",
@@ -118,7 +121,6 @@
        "      <td>441 sqft</td>\n",
        "      <td>$1,406</td>\n",
        "      <td>Cooling only</td>\n",
-       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -132,7 +134,6 @@
        "      <td>579 sqft</td>\n",
        "      <td>$1,261</td>\n",
        "      <td>Cooling only</td>\n",
-       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -146,7 +147,6 @@
        "      <td>429 sqft</td>\n",
        "      <td>$1,329</td>\n",
        "      <td>Cooling only</td>\n",
-       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -160,152 +160,59 @@
        "      <td>632 sqft</td>\n",
        "      <td>$1,100</td>\n",
        "      <td>No</td>\n",
-       "      <td>2022</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>382</th>\n",
-       "      <td>195 Classon Ave #5</td>\n",
-       "      <td>Brooklyn, NY 11205</td>\n",
-       "      <td>Bedford Stuyvesant</td>\n",
-       "      <td>$1,395,000</td>\n",
-       "      <td>Year Built: 2008</td>\n",
-       "      <td>2 Beds</td>\n",
-       "      <td>2 Baths</td>\n",
-       "      <td>1,185 sqft</td>\n",
-       "      <td>$1,177</td>\n",
-       "      <td>No</td>\n",
-       "      <td>2008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>383</th>\n",
-       "      <td>140 E 2nd St #6U</td>\n",
-       "      <td>Brooklyn, NY 11218</td>\n",
-       "      <td>Windsor Terrace</td>\n",
-       "      <td>$595,000</td>\n",
-       "      <td>Year Built: 1940</td>\n",
+       "      <th>6</th>\n",
+       "      <td>2736 Independence Ave #6J</td>\n",
+       "      <td>Bronx, NY 10463</td>\n",
+       "      <td>Spuyten Duyvil</td>\n",
+       "      <td>$235,995</td>\n",
+       "      <td>Year Built: 1970</td>\n",
        "      <td>1 Bed</td>\n",
        "      <td>1 Bath</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>No Info</td>\n",
+       "      <td>850 sqft</td>\n",
+       "      <td>$278</td>\n",
        "      <td>No</td>\n",
-       "      <td>1940</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>384</th>\n",
-       "      <td>410 Maryland Ave #1C</td>\n",
-       "      <td>Staten Island, NY 10305</td>\n",
-       "      <td>Rosebank</td>\n",
-       "      <td>$279,900</td>\n",
-       "      <td>Year Built: 1974</td>\n",
-       "      <td>2 Beds</td>\n",
-       "      <td>1 Bath</td>\n",
-       "      <td>1,100 sqft</td>\n",
-       "      <td>$254</td>\n",
-       "      <td>Heating &amp; Cooling</td>\n",
-       "      <td>1974</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>385</th>\n",
-       "      <td>2415 E 64th St</td>\n",
-       "      <td>Brooklyn, NY 11234</td>\n",
-       "      <td>Mill Basin</td>\n",
-       "      <td>$1,089,000</td>\n",
-       "      <td>Year Built: 1965</td>\n",
-       "      <td>4 Beds</td>\n",
-       "      <td>3 Baths</td>\n",
-       "      <td>1,899 sqft</td>\n",
-       "      <td>$573</td>\n",
-       "      <td>Heating &amp; Cooling</td>\n",
-       "      <td>1965</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>386</th>\n",
-       "      <td>150 E 69th St #3M</td>\n",
-       "      <td>New York, NY 10065</td>\n",
-       "      <td>Upper East Side</td>\n",
-       "      <td>$1,825,000</td>\n",
-       "      <td>Year Built: 1959</td>\n",
-       "      <td>2 Beds</td>\n",
-       "      <td>2 Baths</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>No Info</td>\n",
-       "      <td>Cooling only</td>\n",
-       "      <td>1959</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>387 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Name                        City       Neighbourhood  \\\n",
-       "0    3324 Junction Blvd #5X   Jackson Heights, NY 11372     Jackson Heights   \n",
-       "1         37-26 32nd St #5K  Long Island City, NY 11101             Astoria   \n",
-       "2         37-26 32nd St #3G  Long Island City, NY 11101             Astoria   \n",
-       "3         37-26 32nd St #6L  Long Island City, NY 11101             Astoria   \n",
-       "4         37-26 32nd St #3H  Long Island City, NY 11101             Astoria   \n",
-       "..                      ...                         ...                 ...   \n",
-       "382      195 Classon Ave #5          Brooklyn, NY 11205  Bedford Stuyvesant   \n",
-       "383        140 E 2nd St #6U          Brooklyn, NY 11218     Windsor Terrace   \n",
-       "384    410 Maryland Ave #1C     Staten Island, NY 10305            Rosebank   \n",
-       "385          2415 E 64th St          Brooklyn, NY 11234          Mill Basin   \n",
-       "386       150 E 69th St #3M          New York, NY 10065     Upper East Side   \n",
+       "                        Name                        City   Neighbourhood  \\\n",
+       "1          37-26 32nd St #5K  Long Island City, NY 11101         Astoria   \n",
+       "2          37-26 32nd St #3G  Long Island City, NY 11101         Astoria   \n",
+       "3          37-26 32nd St #6L  Long Island City, NY 11101         Astoria   \n",
+       "4          37-26 32nd St #3H  Long Island City, NY 11101         Astoria   \n",
+       "6  2736 Independence Ave #6J             Bronx, NY 10463  Spuyten Duyvil   \n",
        "\n",
-       "          Price        Year Built    Beds    Baths        Area  \\\n",
-       "0      $285,000              Null   1 Bed   1 Bath    800 sqft   \n",
-       "1      $620,000  Year Built: 2022  Studio   1 Bath    441 sqft   \n",
-       "2      $730,000  Year Built: 2022   1 Bed   1 Bath    579 sqft   \n",
-       "3      $570,000  Year Built: 2022  Studio   1 Bath    429 sqft   \n",
-       "4      $695,000  Year Built: 2022   1 Bed   1 Bath    632 sqft   \n",
-       "..          ...               ...     ...      ...         ...   \n",
-       "382  $1,395,000  Year Built: 2008  2 Beds  2 Baths  1,185 sqft   \n",
-       "383    $595,000  Year Built: 1940   1 Bed   1 Bath        Null   \n",
-       "384    $279,900  Year Built: 1974  2 Beds   1 Bath  1,100 sqft   \n",
-       "385  $1,089,000  Year Built: 1965  4 Beds  3 Baths  1,899 sqft   \n",
-       "386  $1,825,000  Year Built: 1959  2 Beds  2 Baths        Null   \n",
+       "      Price        Year Built    Beds   Baths      Area Price(per sqft)  \\\n",
+       "1  $620,000  Year Built: 2022  Studio  1 Bath  441 sqft          $1,406   \n",
+       "2  $730,000  Year Built: 2022   1 Bed  1 Bath  579 sqft          $1,261   \n",
+       "3  $570,000  Year Built: 2022  Studio  1 Bath  429 sqft          $1,329   \n",
+       "4  $695,000  Year Built: 2022   1 Bed  1 Bath  632 sqft          $1,100   \n",
+       "6  $235,995  Year Built: 1970   1 Bed  1 Bath  850 sqft            $278   \n",
        "\n",
-       "    Price(per sqft)                A/C cleaned_year  \n",
-       "0              $356       Cooling only         Null  \n",
-       "1            $1,406       Cooling only         2022  \n",
-       "2            $1,261       Cooling only         2022  \n",
-       "3            $1,329       Cooling only         2022  \n",
-       "4            $1,100                 No         2022  \n",
-       "..              ...                ...          ...  \n",
-       "382          $1,177                 No         2008  \n",
-       "383         No Info                 No         1940  \n",
-       "384            $254  Heating & Cooling         1974  \n",
-       "385            $573  Heating & Cooling         1965  \n",
-       "386         No Info       Cooling only         1959  \n",
-       "\n",
-       "[387 rows x 11 columns]"
+       "            A/C  \n",
+       "1  Cooling only  \n",
+       "2  Cooling only  \n",
+       "3  Cooling only  \n",
+       "4            No  \n",
+       "6            No  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.drop(labels = ['Unnamed: 0'], axis = 1)"
+    "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +236,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>Name</th>\n",
        "      <th>City</th>\n",
        "      <th>Neighbourhood</th>\n",
@@ -345,23 +251,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3324 Junction Blvd #5X</td>\n",
-       "      <td>Jackson Heights, NY 11372</td>\n",
-       "      <td>Jackson Heights</td>\n",
-       "      <td>$285,000</td>\n",
-       "      <td>Null</td>\n",
-       "      <td>1 Bed</td>\n",
-       "      <td>1 Bath</td>\n",
-       "      <td>800 sqft</td>\n",
-       "      <td>$356</td>\n",
-       "      <td>Cooling only</td>\n",
-       "      <td>Null</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>37-26 32nd St #5K</td>\n",
        "      <td>Long Island City, NY 11101</td>\n",
        "      <td>Astoria</td>\n",
@@ -376,7 +266,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>37-26 32nd St #3G</td>\n",
        "      <td>Long Island City, NY 11101</td>\n",
        "      <td>Astoria</td>\n",
@@ -391,7 +280,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>37-26 32nd St #6L</td>\n",
        "      <td>Long Island City, NY 11101</td>\n",
        "      <td>Astoria</td>\n",
@@ -406,7 +294,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>37-26 32nd St #3H</td>\n",
        "      <td>Long Island City, NY 11101</td>\n",
        "      <td>Astoria</td>\n",
@@ -419,34 +306,48 @@
        "      <td>No</td>\n",
        "      <td>2022</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2736 Independence Ave #6J</td>\n",
+       "      <td>Bronx, NY 10463</td>\n",
+       "      <td>Spuyten Duyvil</td>\n",
+       "      <td>$235,995</td>\n",
+       "      <td>Year Built: 1970</td>\n",
+       "      <td>1 Bed</td>\n",
+       "      <td>1 Bath</td>\n",
+       "      <td>850 sqft</td>\n",
+       "      <td>$278</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1970</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0                    Name                        City  \\\n",
-       "0           0  3324 Junction Blvd #5X   Jackson Heights, NY 11372   \n",
-       "1           1       37-26 32nd St #5K  Long Island City, NY 11101   \n",
-       "2           2       37-26 32nd St #3G  Long Island City, NY 11101   \n",
-       "3           3       37-26 32nd St #6L  Long Island City, NY 11101   \n",
-       "4           4       37-26 32nd St #3H  Long Island City, NY 11101   \n",
+       "                        Name                        City   Neighbourhood  \\\n",
+       "1          37-26 32nd St #5K  Long Island City, NY 11101         Astoria   \n",
+       "2          37-26 32nd St #3G  Long Island City, NY 11101         Astoria   \n",
+       "3          37-26 32nd St #6L  Long Island City, NY 11101         Astoria   \n",
+       "4          37-26 32nd St #3H  Long Island City, NY 11101         Astoria   \n",
+       "6  2736 Independence Ave #6J             Bronx, NY 10463  Spuyten Duyvil   \n",
        "\n",
-       "     Neighbourhood     Price        Year Built    Beds   Baths      Area  \\\n",
-       "0  Jackson Heights  $285,000              Null   1 Bed  1 Bath  800 sqft   \n",
-       "1          Astoria  $620,000  Year Built: 2022  Studio  1 Bath  441 sqft   \n",
-       "2          Astoria  $730,000  Year Built: 2022   1 Bed  1 Bath  579 sqft   \n",
-       "3          Astoria  $570,000  Year Built: 2022  Studio  1 Bath  429 sqft   \n",
-       "4          Astoria  $695,000  Year Built: 2022   1 Bed  1 Bath  632 sqft   \n",
+       "      Price        Year Built    Beds   Baths      Area Price(per sqft)  \\\n",
+       "1  $620,000  Year Built: 2022  Studio  1 Bath  441 sqft          $1,406   \n",
+       "2  $730,000  Year Built: 2022   1 Bed  1 Bath  579 sqft          $1,261   \n",
+       "3  $570,000  Year Built: 2022  Studio  1 Bath  429 sqft          $1,329   \n",
+       "4  $695,000  Year Built: 2022   1 Bed  1 Bath  632 sqft          $1,100   \n",
+       "6  $235,995  Year Built: 1970   1 Bed  1 Bath  850 sqft            $278   \n",
        "\n",
-       "  Price(per sqft)           A/C cleaned_year  \n",
-       "0            $356  Cooling only         Null  \n",
-       "1          $1,406  Cooling only         2022  \n",
-       "2          $1,261  Cooling only         2022  \n",
-       "3          $1,329  Cooling only         2022  \n",
-       "4          $1,100            No         2022  "
+       "            A/C cleaned_year  \n",
+       "1  Cooling only         2022  \n",
+       "2  Cooling only         2022  \n",
+       "3  Cooling only         2022  \n",
+       "4            No         2022  \n",
+       "6            No         1970  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,6 +356,13 @@
     "data['cleaned_year'] = data['Year Built'].apply(lambda x : x[-4:])\n",
     "data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
