--- a/project1_casey.ipynb
+++ b/project1_casey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,16 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['cleaned_year'] = data['Year Built'].apply(lambda x : x[-4:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bm/7gfzqmk92w7f0g15qhnh3_1h0000gn/T/ipykernel_10966/813483522.py:1: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "/var/folders/bm/7gfzqmk92w7f0g15qhnh3_1h0000gn/T/ipykernel_21187/813483522.py:1: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  data['Price'] = data['Price'].str.replace('$', '')\n"
      ]
     }
@@ -99,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,21 +108,317 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['cleaned_year'] = data['Year Built'].apply(lambda x : x[-4:])"
+    "data['Year Built'] = data['Year Built'].apply(lambda x : x[-4:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['cleaned_beds'] = data['Beds'].apply(lambda x : x[0])\n",
-    "data['cleaned_beds'] = data['cleaned_beds'].replace('S', 0.5)"
+    "data['Beds'] = data['Beds'].apply(lambda x : x[0])\n",
+    "data['Beds'] = data['Beds'].replace('S', 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Year Built</th>\n",
+       "      <th>Beds</th>\n",
+       "      <th>Baths</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Price(per sqft)</th>\n",
+       "      <th>A/C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37-26 32nd St #5K</td>\n",
+       "      <td>Long Island City, NY 11101</td>\n",
+       "      <td>Astoria</td>\n",
+       "      <td>620,000</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>441 sqft</td>\n",
+       "      <td>$1,406</td>\n",
+       "      <td>Cooling only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37-26 32nd St #3G</td>\n",
+       "      <td>Long Island City, NY 11101</td>\n",
+       "      <td>Astoria</td>\n",
+       "      <td>730,000</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>579 sqft</td>\n",
+       "      <td>$1,261</td>\n",
+       "      <td>Cooling only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37-26 32nd St #6L</td>\n",
+       "      <td>Long Island City, NY 11101</td>\n",
+       "      <td>Astoria</td>\n",
+       "      <td>570,000</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>429 sqft</td>\n",
+       "      <td>$1,329</td>\n",
+       "      <td>Cooling only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>37-26 32nd St #3H</td>\n",
+       "      <td>Long Island City, NY 11101</td>\n",
+       "      <td>Astoria</td>\n",
+       "      <td>695,000</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>632 sqft</td>\n",
+       "      <td>$1,100</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2736 Independence Ave #6J</td>\n",
+       "      <td>Bronx, NY 10463</td>\n",
+       "      <td>Spuyten Duyvil</td>\n",
+       "      <td>235,995</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>850 sqft</td>\n",
+       "      <td>$278</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>379</th>\n",
+       "      <td>1619 3rd Ave #3B</td>\n",
+       "      <td>New York, NY 10128</td>\n",
+       "      <td>Upper East Side</td>\n",
+       "      <td>635,000</td>\n",
+       "      <td>1975</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>528 sqft</td>\n",
+       "      <td>$1,203</td>\n",
+       "      <td>Cooling only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381</th>\n",
+       "      <td>43 Joralemon St</td>\n",
+       "      <td>Brooklyn, NY 11201</td>\n",
+       "      <td>Brooklyn Heights</td>\n",
+       "      <td>4,500,000</td>\n",
+       "      <td>1845</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3,192 sqft</td>\n",
+       "      <td>$1,410</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>382</th>\n",
+       "      <td>195 Classon Ave #5</td>\n",
+       "      <td>Brooklyn, NY 11205</td>\n",
+       "      <td>Bedford Stuyvesant</td>\n",
+       "      <td>1,395,000</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1,185 sqft</td>\n",
+       "      <td>$1,177</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>410 Maryland Ave #1C</td>\n",
+       "      <td>Staten Island, NY 10305</td>\n",
+       "      <td>Rosebank</td>\n",
+       "      <td>279,900</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1,100 sqft</td>\n",
+       "      <td>$254</td>\n",
+       "      <td>Heating &amp; Cooling</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385</th>\n",
+       "      <td>2415 E 64th St</td>\n",
+       "      <td>Brooklyn, NY 11234</td>\n",
+       "      <td>Mill Basin</td>\n",
+       "      <td>1,089,000</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1,899 sqft</td>\n",
+       "      <td>$573</td>\n",
+       "      <td>Heating &amp; Cooling</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>251 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Name                        City  \\\n",
+       "1            37-26 32nd St #5K  Long Island City, NY 11101   \n",
+       "2            37-26 32nd St #3G  Long Island City, NY 11101   \n",
+       "3            37-26 32nd St #6L  Long Island City, NY 11101   \n",
+       "4            37-26 32nd St #3H  Long Island City, NY 11101   \n",
+       "6    2736 Independence Ave #6J             Bronx, NY 10463   \n",
+       "..                         ...                         ...   \n",
+       "379           1619 3rd Ave #3B          New York, NY 10128   \n",
+       "381            43 Joralemon St          Brooklyn, NY 11201   \n",
+       "382         195 Classon Ave #5          Brooklyn, NY 11205   \n",
+       "384       410 Maryland Ave #1C     Staten Island, NY 10305   \n",
+       "385             2415 E 64th St          Brooklyn, NY 11234   \n",
+       "\n",
+       "          Neighbourhood       Price Year Built Beds Baths        Area  \\\n",
+       "1               Astoria    620,000        2022  0.5    1     441 sqft   \n",
+       "2               Astoria    730,000        2022    1    1     579 sqft   \n",
+       "3               Astoria    570,000        2022  0.5    1     429 sqft   \n",
+       "4               Astoria    695,000        2022    1    1     632 sqft   \n",
+       "6        Spuyten Duyvil    235,995        1970    1    1     850 sqft   \n",
+       "..                  ...         ...        ...  ...   ...         ...   \n",
+       "379     Upper East Side    635,000        1975  0.5    1     528 sqft   \n",
+       "381    Brooklyn Heights  4,500,000        1845    5    6   3,192 sqft   \n",
+       "382  Bedford Stuyvesant  1,395,000        2008    2    2   1,185 sqft   \n",
+       "384            Rosebank    279,900        1974    2    1   1,100 sqft   \n",
+       "385          Mill Basin  1,089,000        1965    4    3   1,899 sqft   \n",
+       "\n",
+       "    Price(per sqft)                A/C  \n",
+       "1           $1,406        Cooling only  \n",
+       "2           $1,261        Cooling only  \n",
+       "3           $1,329        Cooling only  \n",
+       "4           $1,100                  No  \n",
+       "6             $278                  No  \n",
+       "..              ...                ...  \n",
+       "379         $1,203        Cooling only  \n",
+       "381         $1,410                  No  \n",
+       "382         $1,177                  No  \n",
+       "384           $254   Heating & Cooling  \n",
+       "385           $573   Heating & Cooling  \n",
+       "\n",
+       "[251 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is the distribution of property types & pricing in New York?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Is there a correlation between the number of bedrooms and property price?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#OLS Regression - look for evidence of statistically significant correlation between bedrooms and property price\n",
+    "Regression Plot - visualize our regression results with a scatterplot and a line of best fit to graphically display correlation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How does property price (price/sqft) vary across different neighborhoods in New York?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Does the presence of *Specific Amenity(ies)* (e.g. Air Conditioning) have a statistically significant impact on property prices in New York, when normalizing for different neighborhoods?"
    ]
   }
  ],
